# ParkinsonMouseSmoothing

./: .gitignore  CMakeLists.txt  NC_flows.json  getData.cpp  main.cpp  smoothMouse.cpp
cloud-component/: database.txt
cloud-component/NC/: docker-compose.yml
